start laying out the page and drawer nav

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- This exposes the library as a global variable: ethers -->
+    <script src="https://cdn.ethers.io/scripts/ethers-v4.min.js"
+            charset="utf-8"
+            type="text/javascript">
+    </script>
     <title>React App</title>
   </head>
   <body>
