--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -23,8 +23,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
-    <!--
+    <!-- <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
+   
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
